@@ -2,6 +2,7 @@
 	* [Engine] Consolidation of engine and renderer convars
 	* [Network] Fixed qport in case of potentially overflowing signed short
 	* [Client] Splitted client.hpp into clientPublic.hpp and clientLocal.hpp
+	* [Engine] Misc fixes
 
 2010-04-29 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Zero qtime_t struct if localtime() fails
